Facilitated ability to remove buildings by clicking pills and added them via heatmap
